--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -30,7 +30,7 @@
                 {{ form.senha }}
             </div>
 
-            <button type="submit" class="btn btn-primary">Sign in to your account</button>
+            <button type="submit" class="btn btn-primary">Acessar conta</button>
         </form>
 
         <!-- Messages Section -->
@@ -44,11 +44,11 @@
 
         <!-- Forgot Password -->
         <div class="forgot-password">
-            <a href="https://connectexperts.com/reset-password">Forgot password?</a>
+            <a href="https://connectexperts.com/reset-password">Esqueceu a senha?</a>
         </div>
 
         <!-- Divider -->
-        <div class="divider">or</div>
+        <div class="divider">ou</div>
 
         <!-- Social Login -->
         <div class="social-login">
@@ -68,7 +68,7 @@
 
         <!-- Sign Up -->
         <p class="signup-prompt">
-            Don't have an account? <a href="{% url 'criar_conta' %}">Create your account</a>
+            Você possuí uma conta? <a href="{% url 'criar_conta' %}">Criar conta</a>
         </p>
     </div>
 
